# file-indexer

./: Readme.md  pyproject.toml
src/: base.py
